// Vitest Snapshot v1

exports[`CdrTable.vue > with basic content > border and striped set to true > renders correctly 1`] = `
<div
  class="cdr-table--responsive"
>
  <table
    class="cdr-table cdr-table--medium cdr-table--striped cdr-table--full-width"
  >
    <!-- @slot CdrTable content (Valid table elements &lt;th&gt;, &lt;tbody&gt;, &lt;tr&gt;, &lt;td&gt;, etc.) -->
    
    
    <thead>
      <tr>
        <th>
          head 1
        </th>
        <th>
          head 2
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          content A1
        </td>
        <td>
          content A2
        </td>
      </tr>
      <tr>
        <td>
          content B1
        </td>
        <td>
          content B2
        </td>
      </tr>
    </tbody>
    
    
  </table>
</div>
`;

exports[`CdrTable.vue > with basic content > renders correctly 1`] = `
<div
  class="cdr-table--responsive"
>
  <table
    class="cdr-table cdr-table--medium cdr-table--border cdr-table--full-width"
  >
    <!-- @slot CdrTable content (Valid table elements &lt;th&gt;, &lt;tbody&gt;, &lt;tr&gt;, &lt;td&gt;, etc.) -->
    
    
    <thead>
      <tr>
        <th>
          head 1
        </th>
        <th>
          head 2
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          content A1
        </td>
        <td>
          content A2
        </td>
      </tr>
      <tr>
        <td>
          content B1
        </td>
        <td>
          content B2
        </td>
      </tr>
    </tbody>
    
    
  </table>
</div>
`;

exports[`CdrTable.vue > with basic content > with xs prop provided > renders correctly 1`] = `
<div
  class="cdr-table--responsive"
>
  <table
    class="cdr-table cdr-table--medium cdr-table--border cdr-table--full-width@xs"
  >
    <!-- @slot CdrTable content (Valid table elements &lt;th&gt;, &lt;tbody&gt;, &lt;tr&gt;, &lt;td&gt;, etc.) -->
    
    
    <thead>
      <tr>
        <th>
          head 1
        </th>
        <th>
          head 2
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          content A1
        </td>
        <td>
          content A2
        </td>
      </tr>
      <tr>
        <td>
          content B1
        </td>
        <td>
          content B2
        </td>
      </tr>
    </tbody>
    
    
  </table>
</div>
`;

exports[`CdrTable.vue > with the aria-label attr set > renders correctly 1`] = `
<div
  aria-label="test table"
  class="cdr-table--responsive"
>
  <table
    aria-label="test table"
    class="cdr-table cdr-table--medium cdr-table--border cdr-table--full-width"
  >
    <!-- @slot CdrTable content (Valid table elements &lt;th&gt;, &lt;tbody&gt;, &lt;tr&gt;, &lt;td&gt;, etc.) -->
    
    
    <thead>
      <tr>
        <th>
          head 1
        </th>
        <th>
          head 2
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          content A1
        </td>
        <td>
          content A2
        </td>
      </tr>
      <tr>
        <td>
          content B1
        </td>
        <td>
          content B2
        </td>
      </tr>
    </tbody>
    
    
  </table>
</div>
`;
